# ioc-miner

./: .gitignore  README.md  pyproject.toml
ioc_miner/: cli.py
ioc_miner/evaluation/: __init__.py  baselines.py  benchmark.py
ioc_miner/extraction/: __init__.py  context_classifier.py  ner_extractor.py  regex_extractor.py
ioc_miner/ingestion/: __init__.py  base.py  html.py  pdf.py  plaintext.py  telegram.py  twitter.py
ioc_miner/models/: __init__.py  ioc.py
ioc_miner/output/: __init__.py  csv_formatter.py  misp_formatter.py  stix_formatter.py
ioc_miner/preprocessing/: __init__.py  normalizer.py
scripts/: case_study_pdn.py  prepare_eval_data.py  run_benchmark.py
tests/: test_benchmark.py  test_context_classifier.py  test_ingestion.py  test_preprocessor.py  test_regex_extractor.py
training/: colab_benchmark.ipynb  colab_benchmark_output_1.ipynb  colab_finetune.ipynb  fine_tune_secbert.py  prepare_dataset.py
