[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ioc-miner"
version = "0.1.0"
description = "Threat intelligence IOC extractor with SecBERT NER and context classification"
requires-python = ">=3.10"
dependencies = [
    # Core NLP
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "datasets>=2.19.0",
    "tokenizers>=0.19.0",
    # Ingestion
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=5.2.0",
    # Output
    "stix2>=3.0.1",
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Utilities
    "nltk>=3.8.1",
    "regex>=2024.4.0",
    "tldextract>=5.1.2",
    "validators>=0.28.0",
]

[project.optional-dependencies]
telegram = ["telethon>=1.36.0"]
twitter = ["tweepy>=4.14.0", "snscrape>=0.7.0"]
train = ["accelerate>=0.30.0", "seqeval>=1.2.2", "scikit-learn>=1.4.0"]
dev = ["pytest>=8.2.0", "pytest-cov>=5.0.0", "ruff>=0.4.0"]

[project.scripts]
ioc-miner = "ioc_miner.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["ioc_miner"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
